--- a/posts.html
+++ b/posts.html
@@ -26,8 +26,8 @@
         </nav>
         <i class="fa-solid fa-bars" id="nav-toggle"></i>
       </div>
-      <main style="padding-top: 5em">
-        <h1 style="text-align: center">All Posts</h1>
+      <h1 style="text-align: center; padding-top: 3em;">All Posts</h1>
+      <main>
         <div class="card">
           <img
             src="https://images.unsplash.com/photo-1669231838364-827ad65ee9a8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
